configs/authenticationapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticationapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authenticationapp
  template:
    metadata:
      labels:
        app: authenticationapp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: authenticationapp
          image: alexandraion226/cloud-authentication-image
          ports:
            - containerPort: 8082   
            - containerPort: 9090
              protocol: TCP
      hostname: authenticationapp
      restartPolicy: Always
