configs/backendapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backendapp
  name: backendapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backendapp
  template:
    metadata:
      labels:
        app: backendapp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9090"
    spec:
      containers:
        - image: alexandraion226/cloud-bussiness-logic-image
          name: backendapp
          ports:
            - containerPort: 8083
              protocol: TCP
      hostname: backendapp
      restartPolicy: Always
