configs/dbinteraction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dbinteraction
  name: dbinteraction
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbinteraction
  template:
    metadata:
      labels:
        app: dbinteraction
    spec:
      containers:
        - env:
            - name: DATABASE_PASSWORD
              value: admin
            - name: DATABASE_URL
              value: jdbc:postgresql://postgresdb:5432/gourmet-db
            - name: DATABASE_USERNAME
              value: postgres
          image: artemizadospinescu/db_interaction_image
          name: dbinteraction
          ports:
            - containerPort: 8081
              protocol: TCP
      hostname: dbinteraction
      restartPolicy: Always
