configs/pgadmin4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pgadmin4
  name: pgadmin4
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: admin@email.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: admin
          image: elestio/pgadmin:latest
          name: pgadmin4
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin4-data
      hostname: pgadmin4
      restartPolicy: Always
      volumes:
        - name: pgadmin4-data
          persistentVolumeClaim:
            claimName: pgadmin4-data
