configs/portainer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portainer
  name: portainer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: portainer
    spec:
      containers:
        - image: portainer/portainer-ce
          name: portainer
          ports:
            - containerPort: 9000
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: portainer-data
      hostname: portainer
      restartPolicy: Always
      volumes:
        - name: portainer-data
          persistentVolumeClaim:
            claimName: portainer-data
