configs/postgresdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgresdb
  name: postgresdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: gourmet-db
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: postgres
          image: postgres:latest
          name: postgresdb
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      hostname: postgresdb
      restartPolicy: Always
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
