configs/authenticationapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: authenticationapp
  name: authenticationapp
  namespace: default
spec:
  type: NodePort
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
      nodePort: 32000
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    app: authenticationapp
