configs/backendapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backendapp
  name: backendapp
  namespace: default
spec:
  type: NodePort
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
      nodePort: 32001
  selector:
    app: backendapp
