configs/dbinteraction-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dbinteraction
  name: dbinteraction
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    app: dbinteraction
