configs/pgadmin4-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-stack.yml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: pgadmin4
  name: pgadmin4
spec:
  ports:
    - name: "8086"
      port: 8086
      targetPort: 80
  selector:
    io.kompose.service: pgadmin4
