configs/portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portainer
  name: portainer
spec:
  type: NodePort
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
      nodePort: 32003
  selector:
    app: portainer
