configs/admin_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pgadmin4
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: postgresdb
        - podSelector:
            matchLabels:
              app: portainer
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgresdb
        - podSelector:
            matchLabels:
              app: portainer
