configs/auth_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: authenticationapp
        - podSelector:
            matchLabels:
              app: dbinteraction
        - podSelector:
            matchLabels:
              app: postgresdb
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: authenticationapp
        - podSelector:
            matchLabels:
              app: dbinteraction
        - podSelector:
            matchLabels:
              app: postgresdb
